# social-fi

./: README.md
client/: context.mdc  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  temp.json  vercel.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/chat/: page.tsx
client/app/claims/: page.tsx
client/app/explore/: page.tsx
client/app/feed/: layout.tsx  page.tsx
client/app/profile/: layout.tsx  page.tsx
client/app/test/: page.tsx
client/app/test-wallet/: page.tsx
client/atoms/: user-atom.ts
client/components/claims/: claims-section.tsx
client/contexts/: AuthContext.tsx
client/hooks/: use-delete-post.ts  use-feed.ts  use-fetch-widgets.ts  use-ipfs.ts  use-nft-metadata.ts  use-user-profile-by-id.ts  use-user-profile.ts  useBuyPass.ts
client/idl/: contract.json
client/lib/: api.ts  ipfs-config.ts  ipfs-utils.ts  nft-metadata-simple.ts  nft-metadata.ts  nft-utils.ts
client/providers/: WalletProvider.tsx
contract/: .gitignore  Anchor.toml
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: events.rs  lib.rs
contract/programs/contract/src/instructions/: claims.rs  creator_pool.rs  factory.rs  fanpass.rs  mod.rs  stakes.rs  voting.rs
contract/programs/contract/src/state/: claim.rs  creator_collection.rs  creator_pool.rs  factory.rs  mod.rs  nft_ownership.rs  refund_distribution.rs  vote_account.rs
server/: Dockerfile  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json
server/lib/: auth.ts
server/prisma/: schema.prisma
server/src/: index.ts  seed.ts
(+73 files in other folders)
